--- a/css/styles.css
+++ b/css/styles.css
@@ -109,7 +109,7 @@ p {
 
 
 /*Code for smaller screen*/
-@media only screen and (max-width: 1440px) {
+@media (min-width: 375px) and (max-width: 1440px) {
 
     h3 {
         font-size: 16px;
@@ -134,6 +134,7 @@ p {
         border-top-left-radius: 8px;
         border-top-right-radius: 8px;
         color:hsl(218, 22%, 67%);
+        
        
     }
 
@@ -143,6 +144,7 @@ p {
         background-color: hsl(179, 75%, 38%);
         margin-right: -20px;
         border-radius: 0;
+        
     }
 
     .whyus {
@@ -153,6 +155,7 @@ p {
         margin-left: -20px;
         border-bottom-left-radius: 5px;
         border-bottom-right-radius: 5px;
+        
     }
 
     .myButton {
