--- a/css/styles.css
+++ b/css/styles.css
@@ -109,7 +109,7 @@ p {
 
 
 /*Code for smaller screen*/
-@media (min-width: 375px) and (max-width: 1440px) {
+@media (max-width: 1440px) and (min-width: 375px) {
 
     h3 {
         font-size: 16px;
