--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+
 body {
     font-family: "Karla"; 
     background: linear-gradient(hsl(218, 22%, 85%), hsl(218, 22%, 90%)), url("../images/background-img.png");
@@ -5,6 +6,8 @@ body {
 
   
 }
+
+
 h1 {
     color: hsl(179, 62%, 43%);
     font-weight: 700;
@@ -109,7 +112,7 @@ p {
 
 
 /*Code for smaller screen*/
-@media (max-width: 1440px) {
+@media (min-width: 375px){
 
     h3 {
         font-size: 16px;
@@ -118,8 +121,8 @@ p {
     .wrapper {
         display: inline-block;
         grid-template-columns: 1fr;
-        grid-auto-rows: minmax(100px, auto);
-        padding-top: 100px;
+        grid-auto-rows: minmax(80, auto);
+        padding-top: 25px;
         color: #fff;
         padding-bottom: 5px;
         font-size: 10px;
