--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+
 body {
     font-family: "Karla"; 
     background: linear-gradient(hsl(218, 22%, 85%), hsl(218, 22%, 90%)), url("../images/background-img.png");
@@ -5,6 +6,8 @@ body {
 
   
 }
+
+
 h1 {
     color: hsl(179, 62%, 43%);
     font-weight: 700;
@@ -51,12 +54,13 @@ p {
 .subscription {
     grid-column: 3;
     grid-row: 2;
-    padding: 25px 35px;
+    padding: 25px 30px;
     background-color: hsl(179, 75%, 38%);
     border-bottom-left-radius: 8px;
     margin-left: -20px;
-   
-  
+}
+.subscription p {
+    font-size: .80rem;
 }
 
 /*dollar signs and text paragraph*/
@@ -82,7 +86,7 @@ p {
 /*Why Us paragraph style*/
 .whyus p  {
     line-height: 1.5rem;
-    font-size: 14px;
+    font-size: 12px;
     
 }
 
@@ -109,21 +113,21 @@ p {
 
 
 /*Code for smaller screen*/
-@media (max-width: 1440px) {
+@media ONLY screen and (max-width: 375px){
 
     h3 {
         font-size: 16px;
         font-weight: 700;
     }
     .wrapper {
-        display: inline-block;
+        display:  inline-block;
         grid-template-columns: 1fr;
-        grid-auto-rows: minmax(100px, auto);
-        padding-top: 100px;
+        grid-auto-rows: minmax(80, auto);
+        padding-top: 25px;
         color: #fff;
         padding-bottom: 5px;
         font-size: 10px;
-        margin: 0 8rem;
+        margin: 0 45px;
     
     }
 
@@ -144,6 +148,7 @@ p {
         background-color: hsl(179, 75%, 38%);
         margin-right: -20px;
         border-radius: 0;
+        font-size: 10px;
         
     }
 
@@ -171,7 +176,6 @@ p {
         background: #C0DF34;
         margin-top: 20px;
         
-
     }
     .myButton:hover {
         background: hsl(218, 22%, 67%);
