media query solution
added media query

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,7 @@
 
 body {
     font-family: "Karla"; 
-    background: linear-gradient(hsl(218, 22%, 85%), hsl(218, 22%, 90%)), url("../images/background-img.png");
-    
+    background: hsl(204, 43%, 93%);
 
   
 }
